feat: integrate NVIDIA NIM embeddings for RAG system, including configuration updates and document chunking for optimized text processing

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,69 @@
-# Database (SQLite - simple file path)
-DATABASE_PATH=./data/todomyday.db
+# ===========================================
+# Required Settings
+# ===========================================
 
-# Vector Database & RAG Configuration
-VECTOR_DB_PATH=./data/vectors
-EMBEDDING_MODEL=text-embedding-3-small
-RAG_ENABLED=true
+# JWT secret for authentication (min 32 characters)
+JWT_SECRET=your-super-secret-jwt-key-min-32-chars
 
-# Backend
-JWT_SECRET=minimum_32_character_secret_key_here_change_me
-JWT_EXPIRATION=24h
-ALLOWED_ORIGINS=http://localhost:3111
+# Encryption key for storing API keys (32 characters for production)
+ENCRYPTION_KEY=your-32-character-encryption-key
 
-# Encryption key for securely storing API keys (min 32 characters)
-ENCRYPTION_KEY=your_encryption_key_at_least_32_characters
+# ===========================================
+# AI Settings (for chat/summarization)
+# ===========================================
 
-# OpenAI-compatible API (fallback if no user provider configured)
+# OpenAI-compatible API settings
 OPENAI_BASE_URL=https://api.openai.com/v1
-OPENAI_API_KEY=sk-your-key
+OPENAI_API_KEY=sk-your-openai-api-key
 OPENAI_MODEL=gpt-3.5-turbo
 
-# SearXNG instances for web search (comma-separated for round-robin)
-# Optional - enables web search feature in Memories
-SEARXNG_URLS=http://13.203.88.215,http://13.200.122.134
+# ===========================================
+# NVIDIA NIM Embeddings (required for RAG)
+# ===========================================
 
-# Frontend
+# Get your API key from https://build.nvidia.com
+NIM_API_KEY=nvapi-your-nvidia-nim-api-key
+NIM_BASE_URL=https://integrate.api.nvidia.com/v1
+NIM_MODEL=nvidia/nv-embedqa-e5-v5
+NIM_RPM_LIMIT=40
+NIM_EMBEDDING_DIM=1024
+
+# ===========================================
+# RAG Settings
+# ===========================================
+
+# Enable/disable RAG features (requires NIM_API_KEY)
+RAG_ENABLED=true
+
+# Vector database storage path
+VECTOR_DB_PATH=./data/vectors
+
+# ===========================================
+# Web Search (optional)
+# ===========================================
+
+# SearXNG instance URLs (comma-separated for round-robin)
+# SEARXNG_URLS=http://localhost:8080,http://searxng.example.com
+
+# ===========================================
+# Server Settings
+# ===========================================
+
+# JWT token expiration
+JWT_EXPIRATION=24h
+
+# Database path
+DATABASE_PATH=./data/todomyday.db
+
+# CORS allowed origins (comma-separated)
+ALLOWED_ORIGINS=http://localhost:3111
+
+# Backend port (for reference, set in code)
+# PORT=8099
+
+# ===========================================
+# Frontend Settings (for Docker build)
+# ===========================================
+
+# Backend API URL for frontend
 VITE_API_URL=http://localhost:8099
