--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.2",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
