refactor: migrate from NVIDIA NIM to ClaraVector for RAG service; update configuration and environment variables accordingly; remove unused FTS and vector repository components

--- a/.env.example
+++ b/.env.example
@@ -18,25 +18,17 @@ OPENAI_API_KEY=sk-your-openai-api-key
 OPENAI_MODEL=gpt-3.5-turbo
 
 # ===========================================
-# NVIDIA NIM Embeddings (required for RAG)
+# ClaraVector Settings (for RAG/semantic search)
 # ===========================================
 
-# Get your API key from https://build.nvidia.com
-NIM_API_KEY=nvapi-your-nvidia-nim-api-key
-NIM_BASE_URL=https://integrate.api.nvidia.com/v1
-NIM_MODEL=nvidia/nv-embedqa-e5-v5
-NIM_RPM_LIMIT=40
-NIM_EMBEDDING_DIM=1024
+# ClaraVector API endpoint
+CLARAVECTOR_URL=https://claravector-production.up.railway.app
 
-# ===========================================
-# RAG Settings
-# ===========================================
+# ClaraVector API key
+CLARAVECTOR_API_KEY=your-claravector-api-key
 
-# Enable/disable RAG features (requires NIM_API_KEY)
+# Enable/disable RAG features (requires CLARAVECTOR_URL)
 RAG_ENABLED=true
-
-# Vector database storage path
-VECTOR_DB_PATH=./data/vectors
 
 # ===========================================
 # Web Search (optional)
