feat: add backup service and enhance database health checks
Changes:
1. Introduced a new backup service in docker-compose.yml to automate database backups every two hours.
2. Updated the Dockerfile to build a new script for checking memories.
3. Implemented comprehensive database health checks in main.go, including WAL checkpoint status, integrity checks, user and todo counts, and journal mode verification.

This update improves data safety through regular backups and enhances database reliability by monitoring its health status.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,17 @@ services:
     depends_on:
       - backend
     restart: unless-stopped
+
+  backup:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: todomyday-backup
+    environment:
+      - DATABASE_PATH=/data/todomyday.db
+    volumes:
+      - ./data:/data
+    command: sh -c "while true; do sleep 7200 && /app/scripts/backup.sh; done"
+    restart: unless-stopped
+    depends_on:
+      - backend
