feat: memories from chat

--- a/.env.example
+++ b/.env.example
@@ -105,3 +105,13 @@ VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 # - SUPABASE_SERVICE_ROLE_KEY (backend only, grants admin access)
 # - SUPABASE_JWT_SECRET (backend only, used to verify tokens)
 # These should NEVER be in your .env file or exposed to the frontend!
+
+# ===========================================
+# PostHog Analytics (Optional)
+# ===========================================
+
+# PostHog project API key (get from https://app.posthog.com)
+VITE_POSTHOG_KEY=phc-your-posthog-api-key
+
+# PostHog host (optional, defaults to https://app.posthog.com)
+VITE_POSTHOG_HOST=https://app.posthog.com
